--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <base href="/links/">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>http://adityaredflag.likesyou.org/</title>
+  <title>Links Of adityaREDFLAG</title>
   <meta name="description" content="All the links of adityaREDFLAG" />
   <link rel="icon" href="64a6aec1a118ef098e4d71cd21589ebf.png" type="image/png" sizes="16x16">
   <link rel="icon" href="db8b63f969ff93c3a9b7a75447c66f3a.png" type="image/png" sizes="32x32">
   <link rel="apple-touch-icon" href="eb94c2e4dee77d5b9840bc3c2e8ee232.png" sizes="180x180">
   <meta property="og:type" content="website"><meta property="og:url" content="https://adityaredflag.my.canva.site/links">
-  <meta property="og:title" content="http://adityaredflag.likesyou.org/">
+  <meta property="og:title" content="Links Of adityaREDFLAG">
   <meta property="og:description" content="All the links of adityaREDFLAG">
   <meta property="og:image" content="https://adityaredflag.my.canva.site/links/16c05faae6591d7803b3ad6d42250124.png">
   <meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200">
