--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
                 </ul>
                 <ul id="icons07" class="icons">
                   <li>
-                    <a class="n01" href="#" aria-label="YouTube Shorts">
+                    <a class="n01" href="https://youtube.com/adityaredflag" aria-label="YouTube Shorts">
                       <svg>
                         <use xlink:href="#icon-7ce1931e393f38f8bf1db4f8c5a16e9b"></use>
                       </svg>
