--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:title" content="adityaREDFLAG" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="All My Links!" />
+     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?display=swap&family=Inter:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700" rel="stylesheet" type="text/css" />
     <style>
       html,
