--- a/index.html
+++ b/index.html
@@ -1208,7 +1208,7 @@
                 <p id="text46">Ahoy! I am <strong>Aditya</strong>, and I am a Roblox YouTuber and a discord bot dev who loves using aoi.js. I was born in Israel but I am from India. </p>
                 <ul id="buttons01" class="buttons">
                   <li>
-                    <a href="/cdn-cgi/l/email-protection#becbcddbccfedad1d3dfd7d090dbc6ca" class="button n01">
+                    <a href="mailto:adi.redflag@gmail.com" class="button n01">
                       <svg>
                         <use xlink:href="#icon-c0646d28bbeb18e39eb973f96b44bd0f"></use>
                       </svg>
